[package]
name = "substreams-eosevm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "substreams"
crate-type = ["cdylib"]


[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
prost = "0.11"
prost-types = "0.12.3"
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-entity-change = "1.3"

# Required so ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
